Student dashboard changes, announcement-feedback-assignment view

--- a/templates/announcement_view_teacher.html
+++ b/templates/announcement_view_teacher.html
@@ -32,7 +32,7 @@
     </div>
 
     <!-- Hidden real file input -->
-    <input type="file" id="attachmentInput" name="attachments" multiple style="display: none;" />
+    <input type="file" id="attachmentInput" name="attachments" multiple />
 
     <!-- Uploaded file list -->
     <div id="fileList" class="mt-3"></div>
