--- a/templates/create_feedback.html
+++ b/templates/create_feedback.html
@@ -12,10 +12,14 @@
         <input type="text" class="form-control" id="studentName" name="studentName" placeholder="Enter student name" required>
     </div>
 
-
     <div class="form-group mb-3">
         <label for="assignmentTitle">Assignment Title</label>
         <input type="text" class="form-control" id="assignmentTitle" name="assignmentTitle" placeholder="Enter assignment title" required>
+    </div>
+
+    <div class="form-group mb-3">
+        <label for="grade">Grade</label>
+        <input type="number" class="form-control" id="grade" name="grade" placeholder="Enter grade" min="0" max="100" required>
     </div>
 
     <div class="form-group mb-3">
