--- a/templates/teacher_course_base.html
+++ b/templates/teacher_course_base.html
@@ -25,7 +25,7 @@
                         <i class="fas fa-arrow-left"></i>
                         <span>Back</span>
                     </a>
-                    <a href="{{ url_for('assignments_teacher', course_code = course_code, course_name = course_name) }}" 
+                    <a href="{{ url_for('view_assignments', course_code=course_code) }}" 
                        class="menu-item {% if request.endpoint == 'view_assignments' %}active{% endif %}">
                         <i class="fas fa-tasks"></i>
                         <span>Assignments</span>
