--- a/templates/announcement_view_student.html
+++ b/templates/announcement_view_student.html
@@ -16,10 +16,10 @@
                             <i class="fas fa-paperclip" style="margin-left: 8px; color: #6c757d;"></i>
                             {% endif %}
                         </h4>
-                        <span class="announcement-date">Posted: {{ announcement[2].strftime('%B %d, %Y') }}</span>
+                        <span class="announcement-date">Posted: {{ announcement[3] }}</span>
                     </div>
                     <div class="announcement-content">
-                        <p>{{ announcement[1]|truncate(200) }}</p>
+                        <p>{{ announcement[2]|truncate(200) }}</p>
                     </div>
                 </div>
             </a>
